--- a/src/app/blogs/components/overview/overview.component.html
+++ b/src/app/blogs/components/overview/overview.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-3 mb-3">
   <div class="col-12">
-    <button class="btn btn-sm btn-outline-success" routerLink="./new">New Entry</button>
+    <button class="btn btn-sm btn-outline-success" routerLink="/blogs/create">New Entry</button>
   </div>
 </div>
 <hr>
