--- a/src/app/blogs/components/blog-form/blog-form.component.html
+++ b/src/app/blogs/components/blog-form/blog-form.component.html
@@ -1,1 +1,35 @@
-<p>blog-form works!</p>
+<div class="container">
+  <h3 class="mt-3 mb-3" *ngIf="!blogId">Create new Blog entry</h3>
+  <h3 class="mt-3 mb-3" *ngIf="blogId">Update Blog entry</h3>
+  <form [formGroup]="blogForm">
+    <div class="form-group">
+      <label for="title">Title:</label>
+      <input type="text" class="form-control" id="title" formControlName="title">
+    </div>
+    <div class="form-group">
+      <label for="subTitle">Sub Title:</label>
+      <input type="text" class="form-control" id="subTitle" formControlName="subTitle">
+    </div>
+
+    <div class="form-group">
+      <label for="author">Author:</label>
+      <input type="text" class="form-control" id="author" formControlName="author">
+    </div>
+
+    <div class="form-group">
+      <label for="imageURL">URL <small>(image)</small>:</label>
+      <input type="text" class="form-control" id="imageURL" formControlName="imageURL">
+    </div>
+
+    <div class="form-group">
+      <label for="content">Blog content:</label>
+      <div id="content" formControlName="content" [froalaEditor]='options'></div>
+    </div>
+
+    <div class="row justify-content-end nd pr-4 pl-4">
+      <button class="btn btn-secondary" type="button" routerLink="../">Back</button>
+      <button class="btn btn-success ml-2" type="submit" *ngIf="!blogId">Create</button>
+      <button class="btn btn-success ml-2" type="submit" *ngIf="blogId">Update</button>
+    </div>
+  </form>
+</div>
