--- a/src/app/shared/components/header/navbar/navbar.component.html
+++ b/src/app/shared/components/header/navbar/navbar.component.html
@@ -7,7 +7,7 @@
 
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/blogs">Blogs <span class="sr-only">(current)</span></a>
       </li>
     </ul>
