--- a/src/app/blogs/components/blog-form/blog-form.component.html
+++ b/src/app/blogs/components/blog-form/blog-form.component.html
@@ -1,35 +1,40 @@
 <div class="container">
-  <h3 class="mt-3 mb-3" *ngIf="!blogId">Create new Blog entry</h3>
-  <h3 class="mt-3 mb-3" *ngIf="blogId">Update Blog entry</h3>
-  <form [formGroup]="blogForm">
+  <h3 *ngIf="!blogId" class="mt-3 mb-3">Create new Blog entry</h3>
+  <h3 *ngIf="blogId" class="mt-3 mb-3">Update Blog entry</h3>
+  <form [formGroup]="blogForm" (ngSubmit)="onSubmit()" *ngIf="loaded">
     <div class="form-group">
       <label for="title">Title:</label>
-      <input type="text" class="form-control" id="title" formControlName="title">
+      <input class="form-control" formControlName="title" id="title" type="text">
     </div>
     <div class="form-group">
       <label for="subTitle">Sub Title:</label>
-      <input type="text" class="form-control" id="subTitle" formControlName="subTitle">
+      <input class="form-control" formControlName="subTitle" id="subTitle" type="text">
     </div>
 
     <div class="form-group">
       <label for="author">Author:</label>
-      <input type="text" class="form-control" id="author" formControlName="author">
+      <input class="form-control" formControlName="author" id="author" type="text">
     </div>
 
     <div class="form-group">
       <label for="imageURL">URL <small>(image)</small>:</label>
-      <input type="text" class="form-control" id="imageURL" formControlName="imageURL">
+      <input class="form-control" formControlName="imageURL" id="imageURL" type="text">
+    </div>
+
+    <div class="form-check mt-4 mb-4">
+      <input type="checkbox" class="form-check-input" id="active" formControlName="active">
+      <label class="form-check-label" for="active">Active</label>
     </div>
 
     <div class="form-group">
       <label for="content">Blog content:</label>
-      <div id="content" formControlName="content" [froalaEditor]='options'></div>
+      <div [froalaEditor]='options' formControlName="content" id="content"></div>
     </div>
 
     <div class="row justify-content-end nd pr-4 pl-4">
-      <button class="btn btn-secondary" type="button" routerLink="../">Back</button>
-      <button class="btn btn-success ml-2" type="submit" *ngIf="!blogId">Create</button>
-      <button class="btn btn-success ml-2" type="submit" *ngIf="blogId">Update</button>
+      <button class="btn btn-secondary" routerLink="../" type="button">Back</button>
+      <button *ngIf="!blogId" class="btn btn-success ml-2" type="submit" [disabled]="!blogForm.valid">Create</button>
+      <button *ngIf="blogId" class="btn btn-success ml-2" type="submit" [disabled]="!blogForm.valid">Update</button>
     </div>
   </form>
 </div>
