--- a/src/app/blogs/components/blog-list/blog-list.component.html
+++ b/src/app/blogs/components/blog-list/blog-list.component.html
@@ -1,1 +1,1 @@
-<app-blog *ngFor="let blog of blogs" [blog]="blog" (deleted)="removeBlog($event)"></app-blog>
+<app-blog (deleted)="removeBlog($event)" *ngFor="let blog of blogs" [blog]="blog"></app-blog>
